Switched to hacker theme

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: eprbell
 github_username:  eprbell
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
