--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: eprbell's blog
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog by a software engineer who quit a Silicon Valley job to be an independent developer and investor.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://eprbell.github.io/eprbell/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: eprbell
 github_username:  eprbell
