--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,9 @@ title: eprbell's blog
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog by a software engineer who quit a Silicon Valley job to be an independent developer and investor.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://eprbell.github.io/eprbell/" # the base hostname & protocol for your site, e.g. http://example.com
+domain: eprbell.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: "https://eprbell.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/eprbell/" # the subpath of your site, e.g. /blog
 twitter_username: eprbell
 github_username:  eprbell
 
