--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,9 @@ plugins:
 include:
   - _posts/
 
+github:
+  is_project_page: false
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
