--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 name: eprbell's blog
-tile: null
+title: null
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The story of a software engineer who quit a Silicon Valley job to become an independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
