--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-name: eprbell's blog
-title: null
+title: eprbell's blog
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The story of a software engineer who quit a Silicon Valley job to become an independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
