--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: eprbell's blog
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The story of a software engineer who quit a Silicon Valley job to become an independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
+  From Silicon Valley software engineer to independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
 #domain: eprbell.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: "https://eprbell.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/eprbell/" # the subpath of your site, e.g. /blog
@@ -36,9 +36,6 @@ plugins:
 
 include:
   - _posts/
-
-github:
-  is_project_page: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
