--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: eprbell's blog
+author: eprbell
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   From Silicon Valley software engineer to independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
