--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ author: eprbell
 email: eprbell0@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   From Silicon Valley software engineer to independent developer and investor. Plus Quantum Computing, Bitcoin and Economics.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://eprbell.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: eprbell
 github_username:  eprbell
 
